fixed z-index of the gallery

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -6,6 +6,7 @@ div.gallery {
   border: 1px solid #ccc;
   float: left;
   width: 180px;
+  z-index: ;
 }
 
 div.gallery:hover {
@@ -70,7 +71,7 @@ img.hover-shadow {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   padding-top: 20px;
   left: 0;
   top: 0;
@@ -83,7 +84,7 @@ img.hover-shadow {
 .modal2 {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   padding-top: 20px;
   left: 0;
   top: 0;
